# serializer version: 1
# name: test_entities[binary_sensor.ebro_0001_alta_tension_activa-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ebro_0001_alta_tension_activa',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Alta tensión activa',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_alta_tension_activa',
    'supported_features': 0,
    'translation_key': 'alta_tension_activa',
    'unique_id': 'LSJA0000000000001_rt_alta_tension',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_alta_tension_activa-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'running',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Alta tensión activa',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_alta_tension_activa',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_aviso_de_carga_necesaria-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ebro_0001_aviso_de_carga_necesaria',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Aviso de carga necesaria',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_aviso_de_carga_necesaria',
    'supported_features': 0,
    'translation_key': 'aviso_de_carga_necesaria',
    'unique_id': 'LSJA0000000000001_rt_aviso_carga',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_aviso_de_carga_necesaria-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Aviso de carga necesaria',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_aviso_de_carga_necesaria',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_aviso_de_combustible_bajo-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ebro_0001_aviso_de_combustible_bajo',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Aviso de combustible bajo',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_aviso_de_combustible_bajo',
    'supported_features': 0,
    'translation_key': 'aviso_de_combustible_bajo',
    'unique_id': 'LSJA0000000000001_rt_aviso_combustible_bajo',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_aviso_de_combustible_bajo-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Aviso de combustible bajo',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_aviso_de_combustible_bajo',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_aviso_neumatico_del_derecho-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ebro_0001_aviso_neumatico_del_derecho',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Aviso neumático del. derecho',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_aviso_neumatico_del_derecho',
    'supported_features': 0,
    'translation_key': 'aviso_neumatico_del_derecho',
    'unique_id': 'LSJA0000000000001_rt_aviso_neumatico_del_der',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_aviso_neumatico_del_derecho-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Aviso neumático del. derecho',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_aviso_neumatico_del_derecho',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_aviso_neumatico_del_izquierdo-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ebro_0001_aviso_neumatico_del_izquierdo',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Aviso neumático del. izquierdo',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_aviso_neumatico_del_izquierdo',
    'supported_features': 0,
    'translation_key': 'aviso_neumatico_del_izquierdo',
    'unique_id': 'LSJA0000000000001_rt_aviso_neumatico_del_izq',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_aviso_neumatico_del_izquierdo-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Aviso neumático del. izquierdo',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_aviso_neumatico_del_izquierdo',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_aviso_neumatico_tras_derecho-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ebro_0001_aviso_neumatico_tras_derecho',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Aviso neumático tras. derecho',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_aviso_neumatico_tras_derecho',
    'supported_features': 0,
    'translation_key': 'aviso_neumatico_tras_derecho',
    'unique_id': 'LSJA0000000000001_rt_aviso_neumatico_tras_der',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_aviso_neumatico_tras_derecho-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Aviso neumático tras. derecho',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_aviso_neumatico_tras_derecho',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_aviso_neumatico_tras_izquierdo-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ebro_0001_aviso_neumatico_tras_izquierdo',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Aviso neumático tras. izquierdo',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_aviso_neumatico_tras_izquierdo',
    'supported_features': 0,
    'translation_key': 'aviso_neumatico_tras_izquierdo',
    'unique_id': 'LSJA0000000000001_rt_aviso_neumatico_tras_izq',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_aviso_neumatico_tras_izquierdo-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Aviso neumático tras. izquierdo',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_aviso_neumatico_tras_izquierdo',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_bateria_baja-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ebro_0001_bateria_baja',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Batería baja',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_bateria_baja',
    'supported_features': 0,
    'translation_key': 'bateria_baja',
    'unique_id': 'LSJA0000000000001_rt_bateria_baja',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_bateria_baja-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'battery',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Batería baja',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_bateria_baja',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_cable_de_carga_conectado-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ebro_0001_cable_de_carga_conectado',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PLUG: 'plug'>,
    'original_icon': None,
    'original_name': 'Cable de carga conectado',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_cable_de_carga_conectado',
    'supported_features': 0,
    'translation_key': 'cable_de_carga_conectado',
    'unique_id': 'LSJA0000000000001_chargeGunState',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_cable_de_carga_conectado-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'plug',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Cable de carga conectado',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_cable_de_carga_conectado',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_calefaccion_del_parabrisas-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ebro_0001_calefaccion_del_parabrisas',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Calefacción del parabrisas',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_calefaccion_del_parabrisas',
    'supported_features': 0,
    'translation_key': 'calefaccion_del_parabrisas',
    'unique_id': 'LSJA0000000000001_fWinHeatingState',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_calefaccion_del_parabrisas-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'running',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Calefacción del parabrisas',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_calefaccion_del_parabrisas',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_capo-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ebro_0001_capo',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.OPENING: 'opening'>,
    'original_icon': None,
    'original_name': 'Capó',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_capo',
    'supported_features': 0,
    'translation_key': 'capo',
    'unique_id': 'LSJA0000000000001_hood',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_capo-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'opening',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Capó',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_capo',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_coche_despierto-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ebro_0001_coche_despierto',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Coche despierto',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_coche_despierto',
    'supported_features': 0,
    'translation_key': 'coche_despierto',
    'unique_id': 'LSJA0000000000001_awake',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_coche_despierto-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'running',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Coche despierto',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_coche_despierto',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_conexion-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ebro_0001_conexion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Conexión',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_conexion',
    'supported_features': 0,
    'translation_key': 'conexion',
    'unique_id': 'LSJA0000000000001_online',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_conexion-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Conexión',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_conexion',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_cortina_del_techo-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ebro_0001_cortina_del_techo',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': 'Cortina del techo',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_cortina_del_techo',
    'supported_features': 0,
    'translation_key': 'cortina_del_techo',
    'unique_id': 'LSJA0000000000001_sunshadeState',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_cortina_del_techo-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Cortina del techo',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_cortina_del_techo',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_motor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ebro_0001_motor',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Motor',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_motor',
    'supported_features': 0,
    'translation_key': 'motor',
    'unique_id': 'LSJA0000000000001_engineState',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_motor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'running',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Motor',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_motor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_porton_en_movimiento-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ebro_0001_porton_en_movimiento',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOVING: 'moving'>,
    'original_icon': None,
    'original_name': 'Portón en movimiento',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_porton_en_movimiento',
    'supported_features': 0,
    'translation_key': 'porton_en_movimiento',
    'unique_id': 'LSJA0000000000001_liftgateOperateState',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_porton_en_movimiento-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'moving',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Portón en movimiento',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_porton_en_movimiento',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_puerta_del_derecha-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ebro_0001_puerta_del_derecha',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'Puerta del. derecha',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_puerta_del_derecha',
    'supported_features': 0,
    'translation_key': 'puerta_del_derecha',
    'unique_id': 'LSJA0000000000001_frontRightDoor',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_puerta_del_derecha-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'door',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Puerta del. derecha',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_puerta_del_derecha',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_puerta_del_izquierda-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ebro_0001_puerta_del_izquierda',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'Puerta del. izquierda',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_puerta_del_izquierda',
    'supported_features': 0,
    'translation_key': 'puerta_del_izquierda',
    'unique_id': 'LSJA0000000000001_frontLeftDoor',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_puerta_del_izquierda-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'door',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Puerta del. izquierda',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_puerta_del_izquierda',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_puerta_tras_derecha-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ebro_0001_puerta_tras_derecha',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'Puerta tras. derecha',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_puerta_tras_derecha',
    'supported_features': 0,
    'translation_key': 'puerta_tras_derecha',
    'unique_id': 'LSJA0000000000001_backRightDoor',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_puerta_tras_derecha-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'door',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Puerta tras. derecha',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_puerta_tras_derecha',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_puerta_tras_izquierda-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ebro_0001_puerta_tras_izquierda',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.DOOR: 'door'>,
    'original_icon': None,
    'original_name': 'Puerta tras. izquierda',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_puerta_tras_izquierda',
    'supported_features': 0,
    'translation_key': 'puerta_tras_izquierda',
    'unique_id': 'LSJA0000000000001_backLeftDoor',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_puerta_tras_izquierda-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'door',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Puerta tras. izquierda',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_puerta_tras_izquierda',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_purificacion_de_aire-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ebro_0001_purificacion_de_aire',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.RUNNING: 'running'>,
    'original_icon': None,
    'original_name': 'Purificación de aire',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_purificacion_de_aire',
    'supported_features': 0,
    'translation_key': 'purificacion_de_aire',
    'unique_id': 'LSJA0000000000001_airPurification',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_purificacion_de_aire-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'running',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Purificación de aire',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_purificacion_de_aire',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_sesion-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ebro_0001_sesion',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': 'Sesión',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_sesion',
    'supported_features': 0,
    'translation_key': 'sesion',
    'unique_id': 'LSJA0000000000001_session',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_sesion-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Sesión',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_sesion',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_ventanilla_del_derecha-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ebro_0001_ventanilla_del_derecha',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': 'Ventanilla del. derecha',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_ventanilla_del_derecha',
    'supported_features': 0,
    'translation_key': 'ventanilla_del_derecha',
    'unique_id': 'LSJA0000000000001_frontRightWindowState',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_ventanilla_del_derecha-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Ventanilla del. derecha',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_ventanilla_del_derecha',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_ventanilla_del_izquierda-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ebro_0001_ventanilla_del_izquierda',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': 'Ventanilla del. izquierda',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_ventanilla_del_izquierda',
    'supported_features': 0,
    'translation_key': 'ventanilla_del_izquierda',
    'unique_id': 'LSJA0000000000001_frontLeftWindowState',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_ventanilla_del_izquierda-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Ventanilla del. izquierda',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_ventanilla_del_izquierda',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_ventanilla_tras_derecha-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ebro_0001_ventanilla_tras_derecha',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': 'Ventanilla tras. derecha',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_ventanilla_tras_derecha',
    'supported_features': 0,
    'translation_key': 'ventanilla_tras_derecha',
    'unique_id': 'LSJA0000000000001_backRightWindowState',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_ventanilla_tras_derecha-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Ventanilla tras. derecha',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_ventanilla_tras_derecha',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_ventanilla_tras_izquierda-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ebro_0001_ventanilla_tras_izquierda',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.WINDOW: 'window'>,
    'original_icon': None,
    'original_name': 'Ventanilla tras. izquierda',
    'platform': 'ebro',
    'previous_unique_id': None,
    'suggested_object_id': 'ebro_0001_ventanilla_tras_izquierda',
    'supported_features': 0,
    'translation_key': 'ventanilla_tras_izquierda',
    'unique_id': 'LSJA0000000000001_backLeftWindowState',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[binary_sensor.ebro_0001_ventanilla_tras_izquierda-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'window',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Ebro S900 Ventanilla tras. izquierda',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ebro_0001_ventanilla_tras_izquierda',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
